--- a/index.html
+++ b/index.html
@@ -5,30 +5,66 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title> My Web Resume</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP|Source+Code+Pro" rel="stylesheet">
+  <link rel=“stylesheet” href=“https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css” integrity=“sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO” crossorigin=“anonymous”>
 </head>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
 
+
   <div id="page-wrap">
-    <img src="images/IMG_3116.jpg" width="200" height="auto" />
+    <nav id="navbar">
+
+     <div class="container"></div>
+     <ul>
+       <li><a href="#Profile"> &nbsp Profile &nbsp</a></li>
+       <li><a href="#Education">&nbsp Education &nbsp</a></li>
+       <li><a href="#Relevant Coursework">&nbsp Relevant Coursework &nbsp</a></li>
+       <li><a href="#Work Experience">&nbsp Work Experience &nbsp</a></li>
+       <li><a href="#Skills and Achievements">&nbsp Skills and Achievements &nbsp</a></li>
+       <li><a href="#Contact">&nbsp Contact &nbsp</a></li>
+     </ul>
+     </div>
+     </nav>
+
 
     <div class="sticker">
-   Hello, Nice to meet you!
+   Hello, I'm ready!
  </div>
+
+<style>
+  .bg-cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0);
+    opacity: 1;
+    z-index: 2;
+  }
+
+  video {
+    position: relative;
+    z-index: 1;;
+  }
+</style>
+
  <div class="fullscreen-bg">
+    <div class="bg-cover"></div>
+
      <video loop muted autoplay poster="Bubble2.webm" class="fullscreen-bg__video">
          <source src="Bubble2.webm" type="video/webm">
          <source src="Bubble2.webm" type="video/webm">
          <source src="Bubble2.webm" type="video/webm">
      </video>
  </div>
+
+ <img src= "images/IMG_3116.jpg"width="200" height="auto"/>
     <h1>Ryan Cheng</h1>
-
-
 
 
     <div class="column1">
@@ -78,6 +114,13 @@ Master of Arts in Technology and Media </li>
         <div>
         </div>
         <div class="box box2">
+ <a name="Work Experience"></a>
+ <a name="Education"></a>
+ <a name="Skills and Achievements"></a>
+ <a name="Relevant Coursework"></a>
+
+
+
 
             <h1>Work Experience</h1>
 
@@ -132,7 +175,7 @@ Master of Arts in Technology and Media </li>
 <br>
 
     <div class="intro">
-
+<a name="Contact"></a>
       <p id="basic-info">
 
         <i class="fas fa-mobile-alt fa-lg fa-fwv spin" > </i><a href="347 555-1219">347 522-1219</a>
@@ -151,8 +194,22 @@ Master of Arts in Technology and Media </li>
   </div>
 
 
-</body>
 
+  <script>
+    window.onscroll = function(){
+      var position = window.pageYOffset;
+      var opacity = 1 - (position / 1000);
+      if (opacity < 0) {
+        opacity = 0;
+      };
+
+      var bg = document.querySelector('.bg-cover');
+      bg.style.opacity = opacity;
+
+    }
+
+  </script>
+</body>
 
 
 
