--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Master of Arts in Technology and Media </li>
         <i class="far fa-envelope fa-lg fa-fw spin" ></i><a href="mailto:zrc2106@tc.columbia.edu" target="_blank">zrc2106@tc.columbia.edu</a>
         <i class="fab fa-linkedin-in fa-lg fa-fw spin" ></i><a href="#" target="_blank">LinkedIn Profile</a>
         <br/>
-        <br>Adress: 525 Park Ave Apt 8B, New York, NY 10065</p>
+        <br>Address: 525 Park Ave Apt 8B, New York, NY 10065</p>
     </div>
     <footer>
       <p>Site Design by Ryan Cheng &copy; 2018</p>
